--- a/backend/app_version.json
+++ b/backend/app_version.json
@@ -1,5 +1,5 @@
 {
-  "versionCode": 4,
-  "versionName": "1.0.3",
-  "apkUrl": "https://takip.atilimgida.com/uploads/apks/gpsrapor-1.0.3+4.apk"
+  "version": "1.2.1",
+  "buildDate": "2026-02-11T13:30:00Z",
+  "description": "Full system refresh with deep tracking and UI sorting fix"
 }
